--- a/mixins.sass
+++ b/mixins.sass
@@ -57,7 +57,7 @@
   border: none
   padding: 0
 
-@mixin hover($color: $link-hover-color)
+@mixin hover($color: #ff0000)
   cursor: pointer
   &:hover, &:focus
     color: $color
